# lab-03-OOP

./: CMakeLists.txt  main.cpp
andrew_jarvis_alg/: ConvexHullJarvis.cpp  ConvexHullJarvis.h  Point_for_Jarvis.h
fortunes_alg/: data_structures.cpp  data_structures.h  math.cpp  math.h  realization.cpp  realization.h
graham_alg/: ConvexHull.cpp  ConvexHull.h  convexhull_graham.cpp  convexhull_graham.h  point.h  point_for_graham.h
kirkpatrick_alg/: Point_kirkpatrick.h  convexhull_kirkpatrick.cpp  convexhull_kirkpatrick.h
recursive_alg/: ConvexHull.cpp  ConvexHull.h  point.cpp  point.h  recursive_alg.cpp
